PLANSOFT-700: scrollbar fix

--- a/app/styles/defaults/_variables.less
+++ b/app/styles/defaults/_variables.less
@@ -22,7 +22,7 @@
 @line-height-base       : 1.5;
 @border-radius-base     : 4px;
 @border-radius-sm       : 2px;
-@view-height            : 78vh;
+@view-height            : 80vh;
 
 // ICONFONT
 @iconfont-css-prefix    : anticon;
